5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4059/executions/1601_1800.log
== SUBMITION (2019-03-22 08:56:05) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())

variavelgradementesuficienteparafazervoceperderalgunssegundosdasuavida=(a*2+b*2+c*2)/(a+b+c)
print(round(variavelgradementesuficienteparafazervoceperderalgunssegundosdasuavida,6))
-- EXECUTION TIME:
0.116596
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.0
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 08:56:33) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())

variavelgradementesuficienteparafazervoceperderalgunssegundosdasuavida=(a*2+b*2+c*2)/(a+b+c)
(a+b+c)>0
print(round(variavelgradementesuficienteparafazervoceperderalgunssegundosdasuavida,6))
-- EXECUTION TIME:
0.161431
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.0
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:56:35) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())

variavelgradementesuficienteparafazervoceperderalgunssegundosdasuavida=(a*2+b*2+c*2)/(a+b+c)
(a+b+c)>0
print(round(variavelgradementesuficienteparafazervoceperderalgunssegundosdasuavida,6))
-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 09:01:07) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
variavelgradementesuficienteparafazervoceperderalgunssegundosdasuavida=(a*2+b*2+c*2)/(a+b+c)

if
   (a+b+c)<=0
	print("ERROR")
else
   print(round(variavelgradementesuficienteparafazervoceperderalgunssegundosdasuavida,6)
  
-- ERROR:
File "XXXX", line 6
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 09:01:35) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
variavelgradementesuficienteparafazervoceperderalgunssegundosdasuavida=(a*2+b*2+c*2)/(a+b+c)

if (a+b+c)<=0:
	print("ERROR")
else
   print(round(variavelgradementesuficienteparafazervoceperderalgunssegundosdasuavida,6)
  
-- ERROR:
File "XXXX", line 8
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 09:01:49) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
variavelgradementesuficienteparafazervoceperderalgunssegundosdasuavida=(a*2+b*2+c*2)/(a+b+c)

if (a+b+c)<=0:
	print("ERROR")
else:
   print(round(variavelgradementesuficienteparafazervoceperderalgunssegundosdasuavida,6)
  
-- ERROR:
File "XXXX", line 11
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 09:02:48) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
variavelgradementesuficienteparafazervoceperderalgunssegundosdasuavida=(a*2+b*2+c*2)/(a+b+c)

if (a+b+c)<=0:
	print("ERROR")
else:
   print(round(variavelgradementesuficienteparafazervoceperderalgunssegundosdasuavida,6)
   fimse
-- ERROR:
File "XXXX", line 10
    fimse
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 09:03:23) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
variavelgradementesuficienteparafazervoceperderalgunssegundosdasuavida=(a*2+b*2+c*2)/(a+b+c)

if (a+b+c)<=0:
	print("ERROR")
if (a+b+c)>0:
   print(round(variavelgradementesuficienteparafazervoceperderalgunssegundosdasuavida,6)

-- ERROR:
File "XXXX", line 10
    
                                                                                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 09:03:31) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
variavelgradementesuficienteparafazervoceperderalgunssegundosdasuavida=(a*2+b*2+c*2)/(a+b+c)

if (a+b+c)<=0:
	print("ERROR")
if (a+b+c)>0:
   print(round(variavelgradementesuficienteparafazervoceperderalgunssegundosdasuavida,6)
-- ERROR:
File "XXXX", line 10
    
                                                                                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 09:03:41) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
variavelgradementesuficienteparafazervoceperderalgunssegundosdasuavida=(a*2+b*2+c*2)/(a+b+c)

if (a+b+c)<=0:
	print("ERROR")
if (a+b+c)>0:
   print(round(variavelgradementesuficienteparafazervoceperderalgunssegundosdasuavida,6)
			fimse
-- ERROR:
File "XXXX", line 10
    fimse
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 09:07:29) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
variavelgradementesuficienteparafazervoceperderalgunssegundosdasuavida=(a*2+b*2+c*2)/(a+b+c)

if (a+b+c)<=0:
	print("ERROR")
else:
   print(round(variavelgradementesuficienteparafazervoceperderalgunssegundosdasuavida,6))
-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 09:07:42) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
variavelgradementesuficienteparafazervoceperderalgunssegundosdasuavida=(a*2+b*2+c*2)/(a+b+c)

if (a+b+c)<=0:
	print("ERROR")
else:
   print(round(variavelgradementesuficienteparafazervoceperderalgunssegundosdasuavida,6))
-- EXECUTION TIME:
0.202018
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.0
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 09:09:02) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavida=(a*2+b*2+c*2)/(a+b+c)
print(round(variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavida,6))
-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 09:09:07) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavida=(a*2+b*2+c*2)/(a+b+c)
print(round(variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavida,6))
-- EXECUTION TIME:
0.220129
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.0
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 09:09:41) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavida=(a*2+b*2+c*2)/((a+b+c)>0)
print(round(variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavida,6))
-- OUTPUT:
150.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 09:09:49) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavida=(a*2+b*2+c*2)/((a+b+c)>0)
print(round(variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavida,6))
-- EXECUTION TIME:
0.199075
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
150.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
1970.0
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
424.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 09:11:37) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavidakkkkk=(a**2+b**2+c**2)/(a+b+c)

if (a+b+c)<=0:
	print("ERROR")
else:
   print(round(variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavidakkkkk,6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 09:12:31) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())

if (a+b+c)<=0:
	print("ERROR")
else:
	variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavidakkkkk=(a**2+b**2+c**2)/(a+b+c)
   print(round(variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavidakkkkk,6))
-- ERROR:
File "XXXX", line 9
    print(round(variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavidakkkkk,6))
                                                                                           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 09:12:54) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavidakkkkk=(a**2+b**2+c**2)/(a+b+c)
if (a+b+c)<=0:
	print("ERROR")
else:
	print(round(variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavidakkkkk,6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 09:13:01) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavidakkkkk=(a**2+b**2+c**2)/(a+b+c)
if (a+b+c)<=0:
	print("ERROR")
else:
	print(round(variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavidakkkkk,6))
-- EXECUTION TIME:
0.141707
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 09:13:19) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavidakkkkk=(a**2+b**2+c**2)/(a+b+c)
print(round(variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavidakkkkk,6))
-- EXECUTION TIME:
0.180967
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 09:13:21) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavidakkkkk=(a**2+b**2+c**2)/(a+b+c)
print(round(variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavidakkkkk,6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 09:13:57) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
(a + b + c) > 0
variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavidakkkkk=(a**2+b**2+c**2)/(a+b+c)
print(round(variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavidakkkkk,6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 09:13:59) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
(a + b + c) > 0
variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavidakkkkk=(a**2+b**2+c**2)/(a+b+c)
print(round(variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavidakkkkk,6))
-- EXECUTION TIME:
0.149342
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 09:14:43) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
(a+b+c)>0
v=(a**2+b**2+c**2)/(a+b+c)
print(round(v,6))
-- EXECUTION TIME:
0.120019
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 09:16:02) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())

variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavidakkkkk=((a**2)+(b**2)+(c**2))/((a+b+c)>0)
print(round(variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavidakkkkk,6))
-- OUTPUT:
1925.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 09:16:27) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())

variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavidakkkkk=((a**2)+(b**2)+(c**2))/(a+b+c)
print(round(variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavidakkkkk,6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 09:16:32) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())

variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavidakkkkk=((a**2)+(b**2)+(c**2))/(a+b+c)
print(round(variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavidakkkkk,6))
-- EXECUTION TIME:
0.165002
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 09:50:20) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())

variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavidakkkkk=((a**2)+(b**2)+(c**2))/(a+b+c)
print(round(variavelgrandeosuficienteparafazervoceperderalgunssegundosdasuavidakkkkk,7))
-- EXECUTION TIME:
0.198645
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
